[gd_scene load_steps=4 format=2]

[ext_resource path="res://theme/mainButton.tres" type="Theme" id=1]
[ext_resource path="res://script/menu.gd" type="Script" id=2]
[ext_resource path="res://data/audio/click4.ogg" type="AudioStream" id=3]

[node name="menu" type="CanvasLayer"]
pause_mode = 2
layer = 15
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -222.0
margin_bottom = 380.0

[node name="Menu" type="Button" parent="VBoxContainer"]
margin_right = 222.0
margin_bottom = 124.0
theme = ExtResource( 1 )
text = "菜单"

[node name="mainMenu" type="Button" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 222.0
margin_bottom = 252.0
theme = ExtResource( 1 )
text = "主菜单"

[node name="Setting" type="Button" parent="VBoxContainer"]
margin_top = 256.0
margin_right = 222.0
margin_bottom = 380.0
theme = ExtResource( 1 )
text = "设置"

[node name="click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="pressed" from="VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/mainMenu" to="." method="_on_mainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Setting" to="." method="_on_Setting_pressed"]
